# nanobuddy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nanobuddy/: __init__.py  detector.py  engine.py  features.py  onnx_utils.py  vad.py
src/nanobuddy/models/: __init__.py
src/nanobuddy/models/wake_word/: clarvis.onnx  clarvis.pt
src/nanobuddy/tools/: __init__.py  adversarial.py  ambient.py  augment_cli.py  cli.py  config.py  download.py  evaluate.py  generate.py  segment.py  split.py
src/nanobuddy/tools/collect/: __init__.py  config.py  dashboard.py  recorder.py  segmenter.py  validator.py
src/nanobuddy/tools/engines/: __init__.py  base.py  coqui.py  kokoro.py  piper.py
src/nanobuddy/train/: __init__.py  architectures.py  augment.py  auto_config.py  config.py  dataset.py  export.py  loss.py  trainer.py
tests/: test_config.py  test_detector.py  test_engine.py
